<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@drawable/shape_gradient">


    <RelativeLayout
        android:id="@+id/Rlayout2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp">

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/ic_back"/>
        <TextView
            android:id="@+id/bacttxt"
            android:textColor="@color/darker"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/backbtn"
            android:text="@string/Back"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/recovertxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/darker"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:textSize="45sp"
        android:textStyle="bold"
        android:text="@string/Recover"/>

    <RelativeLayout
        android:id="@+id/Rlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/emailtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/Email"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/emailhint"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/emailtxt"
            android:background="@drawable/shape_gradient"
            android:paddingStart="25dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:hint="@string/emailhint"
            android:inputType="textEmailAddress"
            android:padding="8dp" />

    </RelativeLayout>


    <Button
        android:id="@+id/recoverbtn"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_below="@+id/Rlayout"
        android:background="@drawable/shape_leafdarker"
        app:backgroundTint="@null"
        android:text="@string/Recover1"
        android:textColor="@color/white"
        android:layout_marginStart="195dp"
        android:layout_marginTop="120dp"/>

</RelativeLayout>